dev-k3d/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ufo-gateway
  annotations:
    # Will run in wave 2:
    # Wave 0: create cert-manager
    # Wave 1: crate Issuer
    argocd.argoproj.io/sync-wave: "2"
spec:
  listeners:
  - protocol: HTTP
    name: ufo-http
    port: 80

  - protocol: HTTPS
    name: ufo-https
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: self-cert-secret
